[package]
name = "b-l475e-iot01a"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32l4xx-hal = { version = "0.7.1", features = ["stm32l475", "rt"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
embedded-hal = "0.2.7"

[dev-dependencies]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
